[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = "0.1.0"
ff = "0.13.0"
itertools = "0.12.0"
rand_core = "0.6.4"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-field" }
num-bigint = { version = "0.4.3", default-features = false }

[dev-dependencies]
rand_xorshift = "0.3"
ark-std = { version = "0.4", features = ["print-trace"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false